--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -8,11 +8,9 @@
     display:flex;
     justify-content: flex-start;
     position: relative;
-    background-color: rgb(56, 124, 151);
-    background-image: -webkit-linear-gradient(rgb(56, 124, 151),rgba(40, 156, 150, 0.651));
+    background-color: transparent;
     align-items: center;
     z-index: 7;
-    box-shadow: 0 1px 2px 0 rgba(102, 102, 102, 0.2), 0 2px 2px 0 rgba(105, 105, 105, 0.19);
     }
     .nav_bar__logo{
     width: auto;
@@ -91,7 +89,7 @@
     
     @media screen and (max-width: 920px) {
       .nav_bar{
-        height: 5.2vh;
+          height: 8vh;
         }
       .nav_bar__logo{
         width: auto;
@@ -100,7 +98,7 @@
         }
         .nav_bar__compName{
         width:auto;
-        font-size: 2.8vw;
+        font-size: 3vw;
         font-weight:500;
         margin-left:0.7rem;
         color:rgb(248, 245, 245);
@@ -159,8 +157,6 @@
     
     @media screen and (max-width: 830px) {
       .nav_bar{
-        height: 5.2vh;
-        position: fixed;
         top: 0;
         }
       .nav_bar__logo{
@@ -201,8 +197,6 @@
         justify-content: flex-start;
         padding-right: 1vw;
         padding-left: 1.5vw;
-        
-      
         }
         .nav_bar__logo{
         width: auto;
@@ -227,15 +221,12 @@
         font-size: 5em;
         width: auto;
         display: block;
-        
         }
         .nav_bar__login{
         width: 25%;
         height: 100%;
         margin-left: auto;
         padding-right: 3rem;
-        
-        
         }
         .nav_bar__login_btn{
         font-size: 3.5vw ;
@@ -243,7 +234,6 @@
         height: 100%;
         color: rgb(197, 196, 197);
         background-color: transparent;
-        
         }
         .nav_bar__login_btn:hover{
           color: rgb(248, 247, 248);
