--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -92,7 +92,7 @@
           height: 8vh;
         }
       .nav_bar__logo{
-        width: auto;
+        width: 10%;
         height:70%;
         position: relative;
         }
@@ -160,7 +160,7 @@
         top: 0;
         }
       .nav_bar__logo{
-        width: auto;
+        width: 10%;
         height:70%;
         position: relative;
         }
@@ -199,7 +199,7 @@
         padding-left: 1.5vw;
         }
         .nav_bar__logo{
-        width: auto;
+        width: 20%;
         height:60%;
         position: relative;
         }
@@ -276,21 +276,51 @@
         .nav_bar__mobileBtn :hover{
           color: rgb(247, 243, 247);
         }
-        .nav_Mobilemenu{
-          color: rgb(31, 29, 31);
-          width: 70%;
-          height: 90vh;
-          right: -1.8%;
-          top: 130%;
-          background-color:  rgb(248, 242, 248);
-          overflow: hidden;
-          background-image: -webkit-linear-gradient(rgb(255, 255, 255),rgb(219, 219, 219));
+        .nav_Mobilemenu_show{
           position: absolute;
+          color: rgb(255, 218, 247);
+          width: 85%;
+          height: 94vh;
+          right: -2%;
+          top: 101%;
+          padding: 0em 0 0 1em;
+          background-color:  rgb(248, 52, 215);
+          overflow: hidden;
+          background-image: -webkit-linear-gradient(rgb(247, 144, 229),rgb(243, 74, 243));
           z-index: 2;
           border-radius: 2vw 0vw 0vw 2vw;
-          display: block;
-          animation:  mobileMenu  linear;
-          display: none;
+          transition: 0.30s linear;
+		  -webkit-backface-visibility: hidden;
+          -webkit-perspective: 1000;
+          -webkit-transform: translate3d(0,0,0);
+          -webkit-transform: translateZ(0);
+          backface-visibility: hidden;
+          perspective: 1000;
+          transform: translate3d(0,0,0);
+          transform: translateZ(0);
+        }  
+        .nav_Mobilemenu{
+          position: absolute;
+          color: rgb(255, 218, 247);
+          width: 85%;
+          height: 94vh;
+          right: -95%;
+          top: 101%;
+          padding: 0em 0 0 1em;
+          background-color:  rgb(248, 52, 215);
+          overflow: hidden;
+          background-image: -webkit-linear-gradient(rgb(247, 144, 229),rgb(243, 74, 243));
+          z-index: 2;
+          border-radius: 2vw 0vw 0vw 2vw;
+          transition: 0.30s linear;
+		  -webkit-backface-visibility: hidden;
+          -webkit-perspective: 1000;
+          -webkit-transform: translate3d(0,0,0);
+          -webkit-transform: translateZ(0);
+          backface-visibility: hidden;
+          perspective: 1000;
+          transform: translate3d(0,0,0);
+          transform: translateZ(0);
         }  
         .nav_Mobilemenu ul{
           list-style: none;
@@ -411,23 +441,53 @@
           color: rgb(96, 187, 223);;
         }
       
-        .nav_Mobilemenu{
-          color: rgb(196, 248, 244);
+        .nav_Mobilemenu_show{
+          position: absolute;
+          color: rgb(255, 218, 247);
           width: 85%;
           height: 94vh;
-          right: -1.8%;
-          top: 101%;
-          padding: 1em;
-          background-color:  rgb(56, 124, 151);
+          right: -2%;
+          top: 85%;
+          padding: 0em 0 0 1em;
+          background-color:  rgb(248, 52, 215);
           overflow: hidden;
-          background-image: -webkit-linear-gradient(rgb(56, 124, 151),rgba(40, 156, 150, 0.651));
-          position: absolute;
+          background-image: -webkit-linear-gradient(rgb(247, 144, 229),rgb(243, 74, 243));
           z-index: 2;
           border-radius: 2vw 0vw 0vw 2vw;
-          animation:  mobileMenu  linear;
-          display: none;
-          transition: 1s;
-          
+          transition: 0.30s linear;
+		  -webkit-backface-visibility: hidden;
+          -webkit-perspective: 1000;
+          -webkit-transform: translate3d(0,0,0);
+          -webkit-transform: translateZ(0);
+          backface-visibility: hidden;
+          perspective: 1000;
+          transform: translate3d(0,0,0);
+          transform: translateZ(0);
+		  box-shadow: -8px 0px 22px -3px rgba(0,0,0,0.1);
+		  background-image: linear-gradient(to top, #638cb9, #6a86c2, #7a7ec7, #9173c6, #aa65be);
+        }  
+        .nav_Mobilemenu{
+          position: absolute;
+          color: rgb(255, 218, 247);
+          width: 85%;
+          height: 94vh;
+          right: -95%;
+          top: -95%;
+          padding: 0em 0 0 1em;
+          background-color:  rgb(248, 52, 215);
+          overflow: hidden;
+          background-image: -webkit-linear-gradient(rgb(247, 144, 229),rgb(243, 74, 243));
+          z-index: 2;
+          border-radius: 2vw 0vw 0vw 2vw;
+          transition: 0.30s linear;
+		  -webkit-backface-visibility: hidden;
+          -webkit-perspective: 1000;
+          -webkit-transform: translate3d(0,0,0);
+          -webkit-transform: translateZ(0);
+          backface-visibility: hidden;
+          perspective: 1000;
+          transform: translate3d(0,0,0);
+          transform: translateZ(0);
         }  
         .nav_Mobilemenu ul{
           list-style: none;
