--- a/styles/displayImages.module.css
+++ b/styles/displayImages.module.css
@@ -304,6 +304,10 @@ transition:0.5s
 width:93.7%;
 height:69vw;
 }
+.snapDownload_btn,.snapDownloadResponsive_btn{
+height:3rem;
+width:25%;
+}
 }
 
 @media screen and (max-width: 550px) {  
@@ -499,11 +503,13 @@ display:block
 position:absolute;
 width:100%;
 height:50%;
+color: rgb(251, 245, 251);
 text-align:center;
-border-radius: 0 0 0.6rem 0.6rem;
+border-radius: 0 0 0.7rem 0.7rem;
 font-weight:bold;
 font-size:1.5vw;
-background-color:white;
+background-color:rgb(202, 106, 211);
+box-shadow: 0px 25px 16px -20px rgba(0,0,0,0.1);
 transition: transform 0.5s;
 display:none;
 }
@@ -512,13 +518,19 @@ display:flex;
 justify-content:center;
 align-items:center;
 font-size:1.7vw;
-width:33.3%;
+width:fit-content;
+padding:11%;
 height:30%;
 margin:auto;
-border:1px solid green;
+border:2px solid rgb(251, 245, 251);
 border-style:dashed;
 border-radius:2rem;
-cursor:pointer
+cursor:pointer;
+transition: transform 0.5s;
+}
+.change_image_arragngements_reset{
+margin-top:1vw;
+font-size:1vw;
 }
 .tools{
 flex-direction: column;
