--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -331,7 +331,6 @@ transition: 0.4s;
     .footer{
         width: 100%;
         padding-top: 10vw;
-
     }
     .footer_logo{
         display: flex;
@@ -420,10 +419,14 @@ transition: 0.4s;
         margin: auto;
         gap: 2rem;
         padding-bottom: 0rem;
+		
         }
         
         .footer_links_contianer{
             flex: 1;
+			display:flex;
+			gap: 5vw;
+			
         }
         .footer_links_contianer >ul{
             color: rgb(216, 216, 216); 
@@ -432,8 +435,9 @@ transition: 0.4s;
             font-size: 3.2vw;
             gap: 5vw;
             margin: 0;
-            padding: 0;
+            padding: 1rem;
             cursor: pointer;
+			
         }
         
         .footer_Social{
@@ -448,7 +452,7 @@ transition: 0.4s;
            list-style: none;
            display: flex; 
            margin: 0;
-           padding: 0;
+           padding: 1rem;
            gap: 5vw;
            margin-left: 0;
            
@@ -480,8 +484,7 @@ transition: 0.4s;
          right: 2vw;
          top: 85%;
          color: rgb(243, 236, 236) ;
-
-        border: 2px solid rgb(14, 48, 65);
+         border: 2px solid rgb(14, 48, 65);
          border-style: dashed;
          color: rgb(14, 48, 65);
          padding: 1% 0% 0% 0%;
