--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,7 +6,7 @@ padding: 0;
 margin: 0;
 font-family:  -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
 Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-background-color:   #6388c0;
+background-color:    #e5a7ee;
 /*background-image: linear-gradient(to top, #dc76dc, #d867d1, #d558c5, #d147b9, #cd33ac)*/;
 background-image: linear-gradient(to top, #619cb5, #6fa3ce, #8ea8e3, #b8a9ee, #e5a7ee);
     
