--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -167,6 +167,9 @@ transition: 0.4s;
  font-size: 1em;
  cursor: pointer;
  }
+ .li{
+ margin:0.7rem
+ }
 
 @media screen and (max-width: 930px) {     
 .footer{
@@ -324,8 +327,11 @@ transition: 0.4s;
      font-size: 1.5em;
      cursor: pointer;
      }
+	 .li{
+			 margin:0.7rem
+	}
 
-}
+    }
 
 @media screen and (max-width: 550px) {   
     .footer{
@@ -433,7 +439,6 @@ transition: 0.4s;
             list-style: none;
             display: flex;
             font-size: 3.2vw;
-            gap: 5vw;
             margin: 0;
             padding: 1rem;
             cursor: pointer;
@@ -444,7 +449,6 @@ transition: 0.4s;
             color: rgb(216, 216, 216); 
             font-size: 1em;
             align-items: right;
-            gap: 500px;
             cursor: pointer;
             flex: 1;
         }
@@ -453,7 +457,6 @@ transition: 0.4s;
            display: flex; 
            margin: 0;
            padding: 1rem;
-           gap: 5em;
            margin-left: 0;
            
         }
@@ -494,6 +497,9 @@ transition: 0.4s;
          font-size: 5vw;
          cursor: pointer;
          }
+		 .li{
+			 margin:0.7rem
+		 }
          }
 
 
