--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -182,10 +182,15 @@
           border: 1px solid rgb(197, 196, 197);
           background-color: transparent;
           }
+		   .nav_bar__logo{
+        width: 10%;
+        height:70%;
+        position: relative;
+        }
           .nav_Mobilemenu{
             display: none;
-          }
-    }
+        }
+        }
     
     @media screen and (max-width: 550px) {
       .nav_bar{
