--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -91,10 +91,11 @@
     @media screen and (max-width: 920px) {
       .nav_bar{
           height: 8vh;
+		  border: 1px solid red;
         }
       .nav_bar__logo{
         width: 8%;
-        height:100%;
+        height:60%;
         position: relative;
         }
         .nav_bar__compName{
@@ -157,40 +158,7 @@
         }
     
     
-    @media screen and (max-width: 830px) {
-      .nav_bar{
-        top: 0;
-        }
-      .nav_bar__logo{
-        width: 10%;
-        height:70%;
-        position: relative;
-        }
-        .nav_bar__logo_icon{
-        width:100%; 
-        height: 100%;
-        }
-        .nav_bar__login{
-          width: 10vw;
-          height: 100%;
-          }
-          .nav_bar__login_btn{
-          font-size: 1.6vw ;
-          width: 100%;
-          height: 100%;
-          color: rgb(197, 196, 197);
-          border: 1px solid rgb(197, 196, 197);
-          background-color: transparent;
-          }
-		   .nav_bar__logo{
-        width: 8%;
-        height:100%;
-        position: relative;
-        }
-          .nav_Mobilemenu{
-            display: none;
-        }
-        }
+   
     
     @media screen and (max-width: 550px) {
       .nav_bar{
