--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -90,8 +90,8 @@
     
     @media screen and (max-width: 920px) {
       .nav_bar{
-          height: 8dvh;
-		  border: 1px solid red;
+        height: 5em;
+		border: 1px solid red;
         }
       .nav_bar__logo{
         width: 8%;
