--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -161,9 +161,9 @@ transition: 0.4s;
  border: 0;
  padding: 1.2% 1.2% 1% 1.2%;
  border-radius: 50%;
- border: 2px solid rgb(188, 184, 191 );
+ border: 2px solid #e5a7ee;
  border-style: dashed;
- color: rgb(188, 184, 191 );
+ color: #e5a7ee;
  font-size: 1em;
  cursor: pointer;
  }
