--- a/styles/displayImages.module.css
+++ b/styles/displayImages.module.css
@@ -13,7 +13,6 @@ background-repeat:no-repeat;
 background-size:contain;
 position:relative;
 background-color:transparent;
-border:2px solid red;
 display:none
 }
 
@@ -40,7 +39,8 @@ border-radius:2rem;
 background-image: linear-gradient(to right, #61a7b5, #5ca5c6, #69a1d4, #879adb, #ab8fd6);
 box-shadow: 0px 0px 15px -5px rgba(0,0,0,0.1);
 border-style:dashed;
-transition:0.5s
+transition:0.5s;
+display:none
 }
 .snapDownload_btn:hover{
 color:rgb(248, 213, 250);
@@ -259,7 +259,7 @@ align-items:center;
 justify-content:center;
 margin-top:3vw
 }
- .tools_input::-webkit-file-upload-button  {
+.tools_input::-webkit-file-upload-button{
 top: 150px;
 font-family: calibri;
 width: 150px;
@@ -272,6 +272,14 @@ border-radius:2rem;
 background-image: linear-gradient(to top, #48a3a3, #389faf, #3899ba, #4a91c0, #6388c0);
 box-shadow: 0px 0px 15px -5px rgba(0,0,0,0.1);
 cursor: pointer;
+display:none
+}
+
+.tools_input::-webkit-file-upload-button:hover{
+color:rgb(248, 213, 250);
+background-image: linear-gradient(to left, #69a9b7, #63a7c7, #6da2d4, #899adb, #ab8fd6);
+box-shadow: 0px 0px 15px -5px rgba(0,0,0,0.2);
+transition:0.5s
 }
 .shuffBtn{
 top: 150px;
@@ -286,19 +294,96 @@ border-radius:2rem;
 background-image: linear-gradient(to top, #48a3a3, #389faf, #3899ba, #4a91c0, #6388c0);
 box-shadow: 0px 0px 15px -5px rgba(0,0,0,0.1);
 cursor: pointer;
+display:none
 }
 
-.tools_input::-webkit-file-upload-button:hover{
-color:rgb(248, 213, 250);
-background-image: linear-gradient(to left, #69a9b7, #63a7c7, #6da2d4, #899adb, #ab8fd6);
-box-shadow: 0px 0px 15px -5px rgba(0,0,0,0.2);
-transition:0.5s
-}
 .shuffBtn:hover{
 color:rgb(248, 213, 250);
 background-image: linear-gradient(to left, #69a9b7, #63a7c7, #6da2d4, #899adb, #ab8fd6);
 box-shadow: 0px 0px 15px -5px rgba(0,0,0,0.2);
 transition:0.5s
+}
+
+.sideButtons{
+position:absolute;
+top:20%;
+right:0%;
+display:flex;
+flex-direction:row;
+flex-wrap:wrap;
+width:5%;
+height:90%;
+}
+
+.shuffBtnBigSc{
+top: 150px;
+width: 90%;
+height:27%;
+padding: 10px;
+border: 1px dashed rgb(248, 213, 250);
+text-align: center;
+color:rgb(248, 213, 250);
+font-size:1rem;
+background-color: #dc76dc;
+border-radius:2rem;
+border: 2px solid rgb(248, 213, 250);
+background-color:transparent;
+box-shadow: 0px 0px 15px -5px rgba(0,0,0,0.1);
+margin-bottom:0.2rem;
+cursor: pointer;
+}
+.snapDownload_btnBigSc{
+height:45%;
+width:90%;
+border:0;
+color:rgb(248, 213, 250);
+font-size:1rem;
+border-radius:2rem;
+box-shadow: 0px 0px 15px -5px rgba(0,0,0,0.1);
+border: 2px solid rgb(248, 213, 250);
+background-color:transparent;
+margin-bottom:0.2rem;
+transition:0.5s;
+cursor: pointer;
+}
+
+.customButtons{
+height:25%;
+width:90%;
+border:0;
+color:rgb(248, 213, 250);
+font-size:1rem;
+border-radius:2rem;
+box-shadow: 0px 0px 15px -5px rgba(0,0,0,0.1);
+border-style:dashed;
+border: 2px solid rgb(248, 213, 250);
+background-color:transparent;
+margin-bottom:0.2rem;
+transition:0.5s;
+cursor: pointer;
+}
+.customButtons:hover{
+color:rgb(248, 213, 250);
+background-image: linear-gradient(to left, #69a9b7, #63a7c7, #6da2d4, #899adb, #ab8fd6);
+box-shadow: 0px 0px 15px -5px rgba(0,0,0,0.2);
+
+transition:0.5s
+}
+.snapDownload_btnBigSc:hover{
+color:rgb(248, 213, 250);
+background-image: linear-gradient(to left, #69a9b7, #63a7c7, #6da2d4, #899adb, #ab8fd6);
+box-shadow: 0px 0px 15px -5px rgba(0,0,0,0.2);
+transition:0.5s
+}
+.shuffBtnBigSc:hover{
+color:rgb(248, 213, 250);
+background-image: linear-gradient(to left, #69a9b7, #63a7c7, #6da2d4, #899adb, #ab8fd6);
+box-shadow: 0px 0px 15px -5px rgba(0,0,0,0.2);
+border: 0px solid white;
+transition:0.5s
+}
+.tools_input[type='file']{
+color:rgba(0,0,0,0)
 }
 
 
@@ -310,6 +395,61 @@ height:69vw;
 .snapDownload_btn,.snapDownloadResponsive_btn{
 height:3rem;
 width:25%;
+}
+.customButtons{
+display:none
+}
+.snapDownload_btnBigSc{
+display:none
+}
+.shuffBtnBigSc{
+display:none
+}
+.tools_input::-webkit-file-upload-button {
+top: 150px;
+font-size:2vw;
+width:100%;
+height:3rem;
+padding: 10px;
+margin-bottom:1rem;
+border: 1px dashed rgb(249, 181, 252);;
+text-align: center;
+color:rgb(249, 181, 252);
+background-color: #dc76dc;
+border-radius:2rem;
+background-image: linear-gradient(to top, #48a3a3, #389faf, #3899ba, #4a91c0, #6388c0);
+box-shadow: 0px 0px 15px -5px rgba(0,0,0,0.1);
+cursor: pointer;
+display:block
+}
+.shuffBtn{
+top: 150px;
+font-size:2vw;
+width:100%;
+height:3rem;
+padding: 10px;
+border: 1px dashed rgb(249, 181, 252);;
+text-align: center;
+color:rgb(249, 181, 252);
+background-color: #dc76dc;
+border-radius:2rem;
+background-image: linear-gradient(to top, #48a3a3, #389faf, #3899ba, #4a91c0, #6388c0);
+box-shadow: 0px 0px 15px -5px rgba(0,0,0,0.1);
+cursor: pointer;
+display:block
+}
+.snapDownload_btn,.snapDownloadResponsive_btn{
+height:4rem;
+width:25%;
+border:0;
+color:rgb(248, 213, 250);
+font-size:2vw;
+border-radius:2rem;
+background-image: linear-gradient(to right, #61a7b5, #5ca5c6, #69a1d4, #879adb, #ab8fd6);
+box-shadow: 0px 0px 15px -5px rgba(0,0,0,0.1);
+border-style:dashed;
+transition:0.5s;
+display:block
 }
 }
 
