--- a/styles/displayImages.module.css
+++ b/styles/displayImages.module.css
@@ -714,6 +714,52 @@ color:#fff;
 .shuffleContainer{
 margin-top:2vw
 }
+.tools_input::-webkit-file-upload-button {
+top: 150px;
+font-size:4vw;
+width:100%;
+height:3rem;
+padding: 10px;
+margin-bottom:1rem;
+border: 1px dashed rgb(249, 181, 252);;
+text-align: center;
+color:rgb(249, 181, 252);
+background-color: #dc76dc;
+border-radius:2rem;
+background-image: linear-gradient(to top, #48a3a3, #389faf, #3899ba, #4a91c0, #6388c0);
+box-shadow: 0px 0px 15px -5px rgba(0,0,0,0.1);
+cursor: pointer;
+display:block
+}
+.shuffBtn{
+top: 150px;
+font-size:4vw;
+width:100%;
+height:3rem;
+padding: 10px;
+border: 1px dashed rgb(249, 181, 252);;
+text-align: center;
+color:rgb(249, 181, 252);
+background-color: #dc76dc;
+border-radius:2rem;
+background-image: linear-gradient(to top, #48a3a3, #389faf, #3899ba, #4a91c0, #6388c0);
+box-shadow: 0px 0px 15px -5px rgba(0,0,0,0.1);
+cursor: pointer;
+display:block
+}
+.snapDownload_btn,.snapDownloadResponsive_btn{
+height:4rem;
+width:55%;
+border:0;
+color:rgb(248, 213, 250);
+font-size:4vw;
+border-radius:2rem;
+background-image: linear-gradient(to right, #61a7b5, #5ca5c6, #69a1d4, #879adb, #ab8fd6);
+box-shadow: 0px 0px 15px -5px rgba(0,0,0,0.1);
+border-style:dashed;
+transition:0.5s;
+display:block
+}
 }
 
 
