--- a/styles/displayImages.module.css
+++ b/styles/displayImages.module.css
@@ -13,7 +13,7 @@ background-repeat:no-repeat;
 background-size:contain;
 position:relative;
 background-color:transparent;
-display:none
+
 }
 
 .imagesContianer_Images{
@@ -383,7 +383,7 @@ transition:0.5s
 }
 
 .tools_input[type='file']{
-color:rgba(0,0,0,0)
+opacity:0
 }
 
 
