--- a/styles/displayImages.module.css
+++ b/styles/displayImages.module.css
@@ -454,6 +454,10 @@ display:block
 }
 
 @media screen and (max-width: 550px) {  
+.imagesContianer{
+width:93.7%;
+height:69vw;
+}
 .imagesContianer_Images{
 
 }
